Fixed small spacing issue

--- a/css/style.css
+++ b/css/style.css
@@ -887,7 +887,7 @@ input[type="text"] {
 }
 
 #they {
-  margin-left: 2vw;
+  margin-left: 3vw;
 }
 
 #other-pronoun {
